# trio-serial

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
doc/source/: api.rst  changelog.rst  conf.py  contributing.rst  example.rst  index.rst  install.rst  license.rst
src/trio_serial/: __init__.py  _windows_cffi.py  abstract.py  bsd.py  cygwin.py  darwin.py  linux.py  posix.py  windows.py
tests/: test_trio_serial.py
